[FEAT] Agrego vista de contact con mis datos y mi card-item. [FIX] Soluciono unos detalles de css en shop y cart y agrego boton de submit en la version mobile de shop

--- a/public/styles/pages/cart.css
+++ b/public/styles/pages/cart.css
@@ -205,6 +205,7 @@ dejo que el resto se coloque de manera responsive. */
 }
 
 .resumen__pagar {
+  width: 100%;
   font-size: var(--font-size-20px);
   font-weight: 700;
   color: var(--color-fuente-claro);
